--- a/src/sections/sponsors.njk
+++ b/src/sections/sponsors.njk
@@ -6,7 +6,8 @@
 					<img src="./imgs/gold.png" class="sponsor-logo " />
 				</div>
 	            <div class="sponsor-text">
-	                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<p><b>Gold's Gym</b>, an International fitness centre is  proud to associate with <b>Excel 2017</b>and <b>The Second Lap</b>.The winners of this mini marathon will be rewarded with a year long free membership costing Rs 32,000.
+					</p>
 	            </div>
 		</div>
 		<div class="sponsor yesbank">
@@ -14,7 +15,8 @@
 					<img src="./imgs/yesbank.png" class="sponsor-logo" />
 				</div>
 	            <div class="sponsor-text">
-	                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<p><b>YES BANK</b> is India's fourth largest private sector bank and are the proud sponsors of <b>The Second Lap</b>,which is a mini marathon conducted to spread the message of organ donation.
+					</p>
 	            </div>
 		</div>
 		<div class="sponsor medical">
@@ -22,7 +24,8 @@
 					<img src="./imgs/medical.png" class="sponsor-logo" />
 				</div>
             	<div class="sponsor-text">
-                	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.henderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laboreorum.</p>
+					<p><b>Medical Trust Hospital</b> is a super speciality hospital located at Kochi,and are the  official medical partners of <b>The second Lap</b>.
+					</p>
 	            </div>
 		</div>
 	</div>
